infrastructure/kubernetes/app/nui-manifests/forwardauth-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: oauth2-proxy-auth
    namespace: nui
spec:
    forwardAuth:
        address: http://oauth2-proxy.auth.svc.cluster.local/
        trustForwardHeader: true
        maxResponseBodySize: 1048576
        authResponseHeaders:
            - X-Auth-Request-User
            - X-Auth-Request-Email
