infrastructure/kubernetes/app/nui-manifests/deployment.yml
# renovate: datasource=docker depName=ghcr.io/nats-nui/nui
# version: 0.9.2

apiVersion: apps/v1
kind: Deployment
metadata:
    name: nui
    namespace: nui
    labels:
        app: nui
spec:
    replicas: 1
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: nui
    template:
        metadata:
            labels:
                app: nui
        spec:
            containers:
                - name: nui
                  image: ghcr.io/nats-nui/nui:0.9.2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - name: http
                        containerPort: 31311
                        protocol: TCP
                  volumeMounts:
                      - name: data
                        mountPath: /db
                  readinessProbe:
                      tcpSocket:
                          port: http
                      initialDelaySeconds: 5
                      periodSeconds: 10
                  livenessProbe:
                      tcpSocket:
                          port: http
                      initialDelaySeconds: 15
                      periodSeconds: 30
                  resources:
                      requests:
                          cpu: 25m
                          memory: 64Mi
                      limits:
                          memory: 256Mi
            volumes:
                - name: data
                  persistentVolumeClaim:
                      claimName: nui-data
