infrastructure/kubernetes/app/nui-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: nui
    namespace: nui
    labels:
        app: nui
spec:
    type: ClusterIP
    selector:
        app: nui
    ports:
        - name: http
          port: 80
          targetPort: http
          protocol: TCP
