infrastructure/kubernetes/app/nui-manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: nui
    namespace: nui
spec:
    parentRefs:
        - name: traefik
          namespace: default
          group: gateway.networking.k8s.io
          kind: Gateway
          sectionName: https
    hostnames:
        - nui.lan
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          filters:
              - type: ExtensionRef
                extensionRef:
                    group: traefik.io
                    kind: Middleware
                    name: oauth2-proxy-auth
              - type: RequestHeaderModifier
                requestHeaderModifier:
                    remove:
                        - Cookie
          backendRefs:
              - name: nui
                port: 80
                group: ""
                kind: Service
                weight: 1
